@@ -57,6 +57,7 @@ public class SwitchboardEditorXml extends AbstractXmlAdapter {
         panel.setAttribute("panelmenu", p.isPanelMenuVisible() ? "yes" : "no");
         panel.setAttribute("scrollable", p.getScrollable());
         panel.setAttribute("hideunconnected", "" + (p.hideUnconnected() ? "yes" : "no"));
+        panel.setAttribute("autoitemrange", "" + (p.autoItemRange() ? "yes" : "no"));
         panel.setAttribute("rangemin", "" + p.getPanelMenuRangeMin());
         panel.setAttribute("rangemax", "" + p.getPanelMenuRangeMax());
         panel.setAttribute("type", p.getSwitchType());
@@ -176,6 +177,12 @@ public class SwitchboardEditorXml extends AbstractXmlAdapter {
         }
         panel.setHideUnconnected(value);
 
+        value = true;
+        if ((a = shared.getAttribute("autoitemrange")) != null && a.getValue().equals("yes")) {
+            value = true;
+        }
+        panel.setAutoItemRange(value);
+
         try {
             rangemin = shared.getAttribute("rangemin").getIntValue();
             rangemax = shared.getAttribute("rangemax").getIntValue();
@@ -230,15 +237,15 @@ public class SwitchboardEditorXml extends AbstractXmlAdapter {
             String adapterName = item.getAttribute("class").getValue();
             log.debug("load via {}", adapterName);
             try {
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 // and do it
                 adapter.load(item, panel);
                 if (!panel.loadOK()) {
                     result = false;
                 }
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException
                     | jmri.configurexml.JmriConfigureXmlException
-                    | RuntimeException e) {
+                    | java.lang.reflect.InvocationTargetException e) {
                 log.error("Exception while loading {}", item.getName(), e);
                 result = false;
             }
